--- a/MatrizFile/nbproject/private/private.properties
+++ b/MatrizFile/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\PC-14\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\mdeni\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
